13417
Take the example:

{code}
class Top {
  val o = "Hi there!"
}

class Bot extends Top {
  override val o = "Ha! " + super.o
}
{code}

And try compiling it with the different versions:

{code}
dietlw@scarab:~/tmp$$ /opt/scala-2.6.1-final/bin/scalac OverrideVal.scala 
dietlw@scarab:~/tmp$$ /opt/scala-2.7.0-final/bin/scalac OverrideVal.scala 
dietlw@scarab:~/tmp$$ /opt/scala-2.7.1.final/bin/scalac OverrideVal.scala 
OverrideVal.scala:6: error: super may be not be used on value o
  override val o = "Ha! " + super.o
                                  ^
one error found
{code}

Why is this an error now?
The error message text could be changed to something like
"super may not be used on value o".
I did not see an entry in the change logs that would explain this
change of behavior and guess it's an error introduced in 2.7.1.
